[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/AssignBeePicker.gd" id="1_fi8v3"]

[node name="AssignBeePicker" type="Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
position = Vector2(0, 0)
size = Vector2(260, 220)
pivot_offset = Vector2(130, 110)
mouse_filter = 2
visible = false
script = ExtResource("1_fi8v3")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -130.0
offset_top = -110.0
offset_right = 130.0
offset_bottom = 110.0

[node name="Margin" type="MarginContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "Assign Bee"
align = 1

[node name="BeeList" type="ItemList" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
select_mode = 1
allow_reselect = true

[node name="Status" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
text = ""

[node name="Hint" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
modulate = Color(1, 1, 1, 0.7)
text = ""

[node name="AutoCloseTimer" type="Timer" parent="."]
one_shot = true
wait_time = 0.7
